# reddit-search

./: .gitignore  Cargo.toml  Justfile  Trunk.toml  index.html  package-lock.json  package.json  rollup.config.js
.github/workflows/: gh-pages.yml  static.yml
script/: date_picker.js
src/: date_time_input.rs  fetch.rs  main.rs  params.rs  pushshift.rs  text_input.rs
src/component/: mod.rs  search_box.rs  search_button.rs  select.rs  text_input.rs
static/: style.css
