[package]
name = "pushshift-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
gloo-storage = "0.2"
gloo-utils = "0.1"
html-escape = "0.2"
js-sys = "0.3"
log = "0.4"
serde_json = "1.0"
url = "2.2"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
yew = "0.19"

[dependencies.time]
version = "0.3"
features = [
  "formatting",
  "parsing",
]

[dependencies.web-sys]
version = "0.3"
features = [
  "Headers",
  "HtmlElement",
  "HtmlInputElement",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Window",
]

[dependencies.serde]
version = "1.0"
features = [
  "derive",
]
